--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -23,6 +23,45 @@
         </div>
 
       </div>
+
+      <!--      begin footer -->
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-5"></div>
+
+          <div class="col-md-7">
+            <div class="row">
+              <div class="col-md-8">
+
+                <ngb-pagination [(page)]="thePageNumber"
+                                [pageSize]="thePageSize"
+                                [collectionSize]="theTotalElements"
+                                [maxSize]="5"
+                                [boundaryLinks]="true"
+                                (pageChange)="listProducts()">
+
+                </ngb-pagination>
+
+              </div>
+
+              <div class="col-md-4 mt-2" style="text-align: right">
+                <span class="me-2">Page Size</span>
+
+                <select (change)="updatePageSize($event)">
+                  <option>2</option>
+                  <option selected="selected">5</option>
+                  <option>10</option>
+                  <option>20</option>
+                  <option>50</option>
+                </select>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--      end footer -->
+
     </div>
   </div>
 </div>
