--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -160,7 +160,7 @@
           <h3>Credit Card</h3>
 
           <div class="row">
-            <div class="col-md-2"> <label>Card Type</label></div>
+            <div class="col-md-2"><label>Card Type</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="cardType">
@@ -172,7 +172,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2"> <label>Name on Card</label></div>
+            <div class="col-md-2"><label>Name on Card</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="nameOnCard" type="text">
@@ -181,7 +181,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2"> <label>Card Number</label></div>
+            <div class="col-md-2"><label>Card Number</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="cardNumber" type="text">
@@ -190,7 +190,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2"> <label>Security Code</label></div>
+            <div class="col-md-2"><label>Security Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="securityCode" type="text">
@@ -199,22 +199,26 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2"> <label>Expiration Month</label></div>
+            <div class="col-md-2"><label>Expiration Year</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="expirationMonth">
-                  <option>TO DO</option>
+                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                  <option *ngFor="let year of creditCardYears">
+                    {{year}}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2"> <label>Expiration Year</label></div>
+            <div class="col-md-2"><label>Expiration Month</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="expirationYear">
-                  <option>TO DO</option>
+                <select formControlName="expirationMonth">
+                  <option *ngFor="let month of creditCardMonths">
+                    {{month}}
+                  </option>
                 </select>
               </div>
             </div>
